# mario

./: .travis.yml  CMakeLists.txt  README.md  compile.sh  compileAndRun.sh  cppcheck.cmake  cppcheck.sh  installDeps.sh  main.cpp  run.sh  sdl2-config.cmake  sdl2-mixer-config.cmake
levels/: 0-0.lvl
libs/: CMakeLists.txt
libs/imgui/: imgui_demo.cpp  imgui_draw.cpp
src/: AnimatedBitmap.cpp  AnimatedBitmap.hpp  AnimatedSprite.cpp  AnimatedSprite.hpp  Bitmap.cpp  Bitmap.hpp  BitmapType.hpp  BitmapsContainer.cpp  BitmapsContainer.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Collision.hpp  Constants.hpp  Context.cpp  Context.hpp  FlipFlags.cpp  FlipFlags.hpp  FpsCounter.cpp  FpsCounter.hpp  KeyboardState.hpp  LevelLoader.cpp  LevelLoader.hpp  Main.cpp  Main.hpp  Object.cpp  Object.hpp  ObjectType.hpp  Sprite.cpp  Sprite.hpp  SpriteType.hpp  SpritesContainer.cpp  SpritesContainer.hpp  TextRenderer.cpp  TextRenderer.hpp  Timer.cpp  Timer.hpp  World.hpp  dummyWindow.cpp  dummyWindow.hpp
src/character/: Debug.cpp  Debug.hpp  Player.cpp  Player.hpp  PlayerGraphicsComponent.cpp  PlayerGraphicsComponent.hpp  PlayerPhysicsComponent.cpp  PlayerPhysicsComponent.hpp
src/character/goomba/: Goomba.cpp  Goomba.hpp
src/character/player/: Graphics.cpp  Graphics.hpp  GraphicsComponent.cpp  GraphicsComponent.hpp  Physics.cpp  Physics.hpp  PhysicsComponent.cpp  PhysicsComponent.hpp  Player.cpp  Player.hpp
src/core/: Audio.cpp  Audio.hpp  Event.cpp  Event.hpp  FpsCounter.cpp  FpsCounter.hpp  State.cpp  State.hpp  StateMachine.cpp  StateMachine.hpp  Timer.cpp  Timer.hpp  Transition.hpp
src/core/stateMachine/: Event.cpp  Event.hpp  State.cpp  State.hpp  StateMachine.cpp  StateMachine.hpp  Transition.hpp
src/environment/: Background.cpp  Background.hpp  BrickBlock.cpp  BrickBlock.hpp  CoinBlock.cpp  CoinBlock.hpp  CoinParticle.cpp  CoinParticle.hpp  Explosion.cpp  Explosion.hpp  Fireball.cpp  Fireball.hpp  GroundBlock.cpp  GroundBlock.hpp  Mushroom.cpp  Mushroom.hpp  SmallBrick.cpp  SmallBrick.hpp
src/environment/block/: Bricks.cpp  Bricks.hpp  Coins.cpp  Coins.hpp  Ground.cpp  Ground.hpp  Mushroom.cpp  Mushroom.hpp  Question.cpp  Question.hpp
src/graphics/: CameraRenderer.cpp  CameraRenderer.hpp  IRenderer.hpp  StillRenderer.cpp  StillRenderer.hpp
src/math/: Vector2.hpp
